# zoom_gate

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  mix.exs  usage-rules.md
.claude/skills/: commit.md  pr.md  release.md  update-docs.md
.github/workflows/: ci.yml
cluster-proof/: docker-compose.yml  negative.exs  positive.exs  run.sh
config/: config.exs  dev.exs  prod.exs  runtime.exs  test.exs
docs/adr/: 0001-media-playback-architecture.md
docs/plans/: media-playback.md
guides/: authentication.md  error-reference.md  gsnet-integration.md  library-integration.md  protocol-analyzer.md  session-lifecycle.md  webhook-rwg-integration.md  webhooks.md
lib/: zoom_gate.ex
lib/mix/tasks/: gen_jwt.ex  openapi.ex  test_rwg.ex
lib/zoom_gate/: analyzer.ex  api_router.ex  api_spec.ex  application.ex  endpoint.ex  gate_channel.ex  live_router.ex  meeting_bot.ex  protocol.ex  router.ex  sdk_jwt.ex  session.ex  session_supervisor.ex  socket.ex  web_client.ex  webhook_router.ex  zoom_api.ex
lib/zoom_gate/analyzer/: chat_message.ex  client_state.ex  correlator.ex  enriched_participant.ex  event_decoder.ex  event_info.ex  (+5 more)
native/: CMakeLists.txt  Dockerfile.build  RWG_PROTOCOL.md  zoom_worker.cpp
native/puppeteer-worker/: meeting.html  package.json  zoom_worker.js
priv/static/: openapi.json
rel/: env.sh.eex
test/: zoom_gate_test.exs
test/support/: mock_meeting_bot.ex  mock_worker.py
test/zoom_gate/: analyzer_test.exs  gate_channel_test.exs  load_test.exs  protocol_test.exs  router_test.exs  sdk_jwt_test.exs  session_test.exs
(+19 files in other folders)
